# lxc-deployment-app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/routes/: health.py  items.py
app/core/: config.py
app/models/: item.py
app/schemas/: item.py
app/services/: json_db.py
tests/: test_items.py
